--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,10 @@
+
 <div>
 	<div></div>
 	<div>
 		<h2>List of users</h2>
-		<div></div>
+		<div>
+			<app-card *ngFor="let list of list$ | async" [list]="list"></app-card>
+		</div>
 	</div>
 </div>
