--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,8 +2,8 @@
 <div class="main">
 	<div class="main__leftside">
 		<span>Sort:</span>
-		<button>by city</button>
-		<button>by company</button>
+		<button (click)="sortByCity()">by city</button>
+		<button (click)="sortByCompany()">by company</button>
 	</div>
 	<div class="main__rightside">
 		<h2>List of users</h2>
