--- a/src/app/cards/edit/edit.component.html
+++ b/src/app/cards/edit/edit.component.html
@@ -1,44 +1,44 @@
-<div>
-	<div>
-		<button>Back to list</button>
+<div class="edit-page">
+	<div class="edit-page__leftside">
+		<button [routerLink]="['/home']">Back to list</button>
 	</div>
-	<div>
-		<div>
+	<div class="edit-page__rightside">
+		<div class="header">
 			<span>User Profile</span>
-			<button>Edit</button>
+			<button (click)="edit()">Edit</button>
 		</div>
-		<div>
+		<div class="form">
 			<form [formGroup]="form" (ngSubmit)="submit()">
 				<div class="form-control" [ngClass]="{invalid: form.get('name')?.touched && form.get('name')?.invalid}">
-					<label for="name">Name:</label>
+					<label for="name">Name</label>
 					<input id="name" type="text" formControlName="name">
 				</div>
 				<div class="form-control" [ngClass]="{invalid: form.get('username')?.touched && form.get('username')?.invalid}">
-					<label for="username">Name:</label>
+					<label for="username">User name</label>
 					<input id="username" type="text" formControlName="username">
 				</div>
 				<div class="form-control" [ngClass]="{invalid: form.get('email')?.touched && form.get('email')?.invalid}">
-					<label for="email">Name:</label>
+					<label for="email">E-mail</label>
 					<input id="email" type="email" formControlName="email">
 				</div>
 				<div class="form-control" [ngClass]="{invalid: form.get('street')?.touched && form.get('street')?.invalid}">
-					<label for="street">Name:</label>
+					<label for="street">Street</label>
 					<input id="street" type="text" formControlName="street">
 				</div>
 				<div class="form-control" [ngClass]="{invalid: form.get('city')?.touched && form.get('city')?.invalid}">
-					<label for="city">Name:</label>
+					<label for="city">City</label>
 					<input id="city" type="text" formControlName="city">
 				</div>
 				<div class="form-control" [ngClass]="{invalid: form.get('zipcode')?.touched && form.get('zipcode')?.invalid}">
-					<label for="zipcode">Name:</label>
+					<label for="zipcode">Zip code</label>
 					<input id="zipcode" type="text" formControlName="zipcode">
 				</div>
 				<div class="form-control" [ngClass]="{invalid: form.get('phone')?.touched && form.get('phone')?.invalid}">
-					<label for="phone">Name:</label>
+					<label for="phone">Phone</label>
 					<input id="phone" type="text" formControlName="phone">
 				</div>
 				<div class="form-control" [ngClass]="{invalid: form.get('website')?.touched && form.get('website')?.invalid}">
-					<label for="website">Name:</label>
+					<label for="website">Website</label>
 					<input id="website" type="text" formControlName="website">
 				</div>
 				<div class="form-control" [ngClass]="{invalid: form.get('comment')?.touched && form.get('comment')?.invalid}">
@@ -46,6 +46,7 @@
 					<input id="comment" type="text" formControlName="comment">
 				</div>
 			</form>
+			<button class="submit" (click)="submit()">Submit</button>
 		</div>
 	</div>
 </div>
